Creando el servidor de registro Eureka

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.application.name=servicio-eureka-server
+# Por defecto el puerto de Eureka es 8761 y se registra a si mismo como servidor y como cliente
+server.port=8761
+# La idea es que Eureka solo sea servidor, por eso lo deshabilitaremos como cliente
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
